# substrate-edgeware

./: Cargo.toml  README.md
client/cli/src/: runner.rs
frame/edge-signaling/: Cargo.toml
frame/edge-signaling/src/: lib.rs  tests.rs
frame/edge-treasury-reward/: Cargo.toml
frame/edge-voting/: Cargo.toml
frame/edge-voting/src/: lib.rs  tests.rs
