[package]
name = "edge-treasury-reward"
version = "1.0.0"
authors = ["drewstone <drewstone329@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-dev", default-features = false, path = "../../primitives/std" }
sp-runtime = { version = "2.0.0-dev", default-features = false, path = "../../primitives/runtime" }
frame-support = { version = "2.0.0-dev", default-features = false, path = "../support" }
frame-system = { version = "2.0.0-dev", default-features = false, path = "../system" }
pallet-staking = { version = "2.0.0-dev", default-features = false, path = "../staking" }
pallet-balances = { version = "2.0.0-dev", default-features = false, path = "../balances" }
pallet-treasury = { version = "2.0.0-dev", default-features = false, path = "../treasury" }

[dev-dependencies]
sp-io = { version = "2.0.0-dev", default-features = false, path = "../../primitives/io" }
sp-core = { version = "2.0.0-dev", path = "../../primitives/core" }
sp-staking = { version = "2.0.0-dev", default-features = false, path = "../../primitives/staking" }
pallet-staking-reward-curve = { version = "2.0.0-dev",  path = "../staking/reward-curve" }
pallet-session = { version = "2.0.0-dev", default-features = false, path = "../session" }
pallet-timestamp = { version = "2.0.0-dev", default-features = false, path = "../timestamp" }

[features]
default = ["std"]
std = [
	"serde",
	# "safe-mix/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"pallet-balances/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-staking/std",
	"pallet-treasury/std",
]
