[package]
name = "edge-voting"
version = "1.0.0"
authors = ["Drew Stone <drew@commonwealth.im>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-rc2", default-features = false, path = "../../primitives/std" }
sp-io = { version = "2.0.0-rc2", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "2.0.0-rc2", default-features = false, path = "../../primitives/runtime" }
frame-support = { version = "2.0.0-rc2", default-features = false, path = "../support" }
frame-system = { version = "2.0.0-rc2", default-features = false, path = "../system" }
pallet-balances = { version = "2.0.0-rc2", default-features = false, path = "../balances" }

[dev-dependencies]
sp-core = { version = "2.0.0-rc2", path = "../../primitives/core" }

[features]
default = ["std"]
std = [
	"serde",
	# "safe-mix/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
